# rescrobbled-config-update

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: release-please.yaml
rescrobbler_update/: __main__.py  main.py  updater.py
